--- a/ProyectoPOS/html/formComentario.html
+++ b/ProyectoPOS/html/formComentario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <link rel="stylesheet" href="../css/styleformComentarios.css">
@@ -27,13 +27,17 @@
                     <!-- Opciones delante de la imagen -->
                     <ul class="navbar-nav flex-row gap-3">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Acerca de</a>
+                            <a class="nav-link text-white" href="../html/index.html#textoAcerca">Acerca de</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Rastreo</a>
+                            <a class="nav-link text-white" href="../html/formRastrear.html">Rastreo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Envío</a>
+                            <a class="nav-link text-white" href="../html/formEnviar.html">Envío</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="../html/formComentario.html">Comentarios</a>
                         </li>
                     </ul>
                 </div>
@@ -70,9 +74,10 @@
         </div>
 
         <div class="piePagina">
+
             <div class="uno">
-                <p>DOMICILIO</p>
-                <p>01 800 5555555555</p>
+                <p>Av San Pablo Xalpa 180, San Martin Xochinahuac, Azcapotzalco, 02128 Ciudad de México, CDMX</p>
+                <p>55 5318 9000</p>
                 <p>Términos y condiciones</p>
             </div>
 
@@ -87,6 +92,7 @@
                 <p>Siguenos</p>
                 <img src="../img/iconosRedes.PNG" alt="">
             </div>
+
 
         </div>
 
